package Item.Interface;

// this interface implement on character that effected by weather
public interface WeatherEffectable {
    void weatherEffected();
}
