package Items.Veggies;

public class Bean extends BaseVeggies{
    public Bean() {
        super(10, 30, 2, 1, 5);
    }
}
