package Items.Veggies;

public class Cucumber extends BaseVeggies{
    public Cucumber() {
        super(15, 20, 6, 2, 30);
    }
}
