package Items.Veggies;

public class Rice extends BaseVeggies{
    public Rice() {
        super(25, 20, 3, 2, 20);
    }
}
